# mlskip

./: .gitignore  .gitmodules  LICENSE  README.md  bench.py  pyproject.toml  shell.nix  train.py
geometrical-cad/: README.md  compile_onnx_model.py
geometrical-cad/geometrical/: geometrical.py  network.py  pycad.py
geometrical-cad/queries/: bounded.sql  geomcad.sql  geomcad_3inputs.sql  geomcad_4inputs.sql  hybrid.sql
metadata/filters/tpcds/: catalog_sales.json  date_dim.json  item.json  store_returns.json  store_sales.json  time_dim.json  web_sales.json
metadata/filters/tpch/: customer.json  lineitem.json  nation.json  orders.json  part.json  partsupp.json  region.json  supplier.json
metadata/functions/tpcds/: catalog_sales.json  date_dim.json  item.json  store_returns.json  store_sales.json  time_dim.json  (+1 more)
metadata/setup/: tpcds.json  tpch.json
nnv_tools/: __init__.py  abcrown_verify.py  block_metadata.py  block_verifier.py  database_preprocess.py  database_setup.py  dataset_duckdb.py  embedding_logistic_pruning.py  filter_catalog.py  function_catalog.py  geomcad_verify.py  marabou_verify.py  metadata_paths.py  model_ground_truth.py  model_runtime.py  modeling.py
scripts/: collect_benchmark_plot_data.py  compile_geomcad_models.sh  run_block_metadata_table_filters.sh  run_e2e_block_skipping_sweep.sh  run_regressor_metadata_sweep.sh  setup_database.sh
scripts/lib/: resolve_uv.sh
tests/: test_bench_metadata_summary.py  test_block_metadata.py  test_embedding_logistic_pruning.py  test_generated_filters.py  test_marabou_verify.py  test_pytorch_benchmarking.py
(+7 files in other folders)
