[project]
name = "code-uh-utn-block-skipping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "appdirs>=1.4",
    "duckdb>=1.5.1",
    "graphviz>=0.20.3",
    "gurobipy>=10",
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "jupyter>=1.1.1",
    "maraboupy>=2.0.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "matplotlib>=3.10.8",
    "ninja>=1.10",
    "onnx>=1.17.0",
    "onnx2pytorch @ git+https://github.com/Verified-Intelligence/onnx2pytorch.git",
    "onnxoptimizer>=0.3",
    "onnxruntime>=1.23.2,<1.24.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "onnxruntime>=1.24.4; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "onnxscript>=0.6.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "psutil>=5.9.5",
    "pyyaml>=6.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "skl2onnx>=1.14",
    "sortedcontainers>=2.4",
    "termcolor>=2.3.0",
    "torch>=2.0.0,<2.9.0",
    "torchvision>=0.12.0,<0.24.0",
    "tqdm>=4.64",
    "vehicle-lang>=0.24.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
